<resources>
    <string name="app_name">Ham_Lin_Seltzer</string>
    <string name="menu_add_child">Add Child</string>
    <string name="menu_search">Search</string>
    <string-array name="isNaughtySelect">
        <!-- leave the true/false values lowercased b/c code stuff-->
        <item>true</item>
        <item>false</item>
    </string-array>
    <string name="hintFirstName">First Name</string>
    <string name="hintLastName">Last Name</string>
    <string name="hintBirthDate">Birth Date</string>
    <string name="hintStreet">Street</string>
    <string name="hintCity">City</string>
    <string name="hintProvince">Province</string>
    <string name="hintPostalCode">Postal Code</string>
    <string name="hintCountry">Country</string>
    <string name="hintLongitude">Longitude</string>
    <string name="hintLatitude">Latitude</string>
    <string name="addChild">Add Child</string>
    <string name="btnSearchLabel">Search</string>
    <string name="hintFirstLastName">Search First or Last Name</string>
    <string name="isNaughtyLabel">Is the child naughty?</string>
    <string name="btnDeleteLabel">Delete</string>
    <string name="btnEditLabel">Edit</string>
    <string name="btnSaveLabel">Save</string>
    <string name="menu_edit_child">Edit</string>
    <string name="menu_delete_child">Delete</string>

    <string name="firstNameLabel">First Name: %1$s</string>
    <string name="lastNameLabel">Last Name: %1$s</string>
    <string name="birthdateLabel">Birthdate: %1$s</string>
    <string name="streetLabel">Street: %1$s</string>
    <string name="cityLabel">City: %1$s</string>
    <string name="provinceLabel">Province: %1$s</string>
    <string name="postalCodeLabel">Postal Code: %1$s</string>
    <string name="countryLabel">Country: %1$s</string>
    <string name="latitudeLabel">Latitude: %1$s</string>
    <string name="longitudeLabel">Longitude: %1$s</string>
    <string name="naughtyLabel">Naughty: %1$s</string>
    <string name="dateCreatedLabel">Date Created: %1$s</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
