<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <item
        android:id="@+id/menu_search"
        android:title="@string/menu_search"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_menu_search" >
    </item>

    <item
        android:id="@+id/menu_add_child"
        android:title="@string/menu_add_child"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_menu_star"/>

    <item
        android:id="@+id/menu_edit_child"
        android:title="@string/menu_edit_child"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_delete_child"
        android:title="@string/menu_delete_child"
        app:showAsAction="never"/>


</menu>
